2013-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Refactor testing for literal bytes, more efficient cast from unsigned.

2013-09-20 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic16/supported-devices.ac,
	  device/non-free/lib/pic16/configure,
	  device/lib/pic16/configure:
	  fixed bug #2220 Detection of 16 bit pic devices supported by gputils
	  is not working correctly on Cygwin environment

2013-09-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,
	  device/non-free/include/pic14/pic16f1704.h,
	  device/non-free/include/pic14/pic16f1708.h,
	  device/non-free/include/pic14/pic16lf1704.h,
	  device/non-free/include/pic14/pic16lf1708.h,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic16f1704.c,
	  device/non-free/lib/pic14/libdev/pic16f1708.c,
	  device/non-free/lib/pic14/libdev/pic16lf1704.c,
	  device/non-free/lib/pic14/libdev/pic16lf1708.c,
	  doc/sdccman.lyx:
	  New devices.

2013-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Enable some Rabbit optimizations for the TLCS-90.
	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/SDCCnaddr.hpp,
	  src/SDCClospre.hpp:
	  Reduce memory footprint in lospre and named address spaces, prepare for reducing memory footprint in register allocation.

2013-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing of longs.
	* src/z80/gen.c:
	  Remove C99 variable declaration.

2013-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c:
	  Do not allocate spill locations for optimized-out jump conditions.

2013-09-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient casts to long, fix handling of register deadness in shifts.

2013-09-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
